--- a/docassemble/Pruvodci/data/questions/poplatekOdpad.yml
+++ b/docassemble/Pruvodci/data/questions/poplatekOdpad.yml
@@ -1,3 +1,9 @@
+metadata:
+  title: Průvodce místním poplatkem za odpad
+  short title: Poplatek za odpad
+  description: Průvodce místním poplatkem za odpad
+  temporary session: True
+---
 features:
   javascript:
     - https://api.mapy.cz/loader.js
